--- a/db.yaml
+++ b/db.yaml
@@ -3,6 +3,10 @@
   become: yes
   vars:
     login_host: db.neelareddy.store
+  vars_prompt:
+  - name: mysql_root_password
+    prompt: please enter MySQL root password
+    private: No
   tasks: 
   - name: Install MySQL server
     ansible.builtin.dnf:
@@ -21,12 +25,12 @@
       - PYMYSQL
       - Cryptography
       executable: pip3.9 #pip3.11 if python version is 3.11
-      
+
 # check password is already setup or not
   - name: check DB connection
     community.mysql.mysql_info:
       login_user: root
-      login_password: ExpenseApp@1
+      login_password: "{{mysql_root_password}}"
       login_host: "{{login_host}}"
       filter: version
       ignore_errors: yes
@@ -36,6 +40,8 @@
     ansible.builtin.debug:
       msg: "output: {{mysql_connection_output}}"
 
-
+  - name: setup root password
+    ansible.builtin.command: "mysql_secure_Installation --set-root-pass {{my_root_password}}"
+    when: mysql_connection_output.failed is true
 
 
