--- a/backend.yaml
+++ b/backend.yaml
@@ -31,5 +31,6 @@
 
   - name: unzip backend code
     ansible.builtin.unarchive:
-      src: /tmp/backend.zip
-      dest: /app             
+      src: /tmp/backend.zip # default checks in ansible server
+      dest: /app  
+      remote_src: yes           
