--- a/backend.yaml
+++ b/backend.yaml
@@ -33,4 +33,11 @@
     ansible.builtin.unarchive:
       src: /tmp/backend.zip # default checks in ansible server
       dest: /app  
-      remote_src: yes           
+      remote_src: yes
+
+  - name: install npm dependencies
+    ansible.builtin.command: npm install
+      args: 
+        chdir: /app
+        
+
