--- a/backend.yaml
+++ b/backend.yaml
@@ -2,7 +2,8 @@
   become: yes
   hosts: backend
   vars:
-
+    login_host: db.neelareddy.store
+    login_password: ExpenseApp@1
   tasks:
   - name: disable default nodejs
     ansible.builtin.command: dnf module disable nodejs -y
@@ -44,5 +45,20 @@
     ansible.builtin.copy:
       src: backend.service
       dest: /etc/systemd/system/backend.service    
+
+  - name: install python mysql command
+    ansible.builtin.pip:
+      name:
+      - PYSQL # to connect MySQL DB from Ansible
+      - Crytography
+    executable: pip3.9 # pip3.11 if python version is 3.11   
+
+  - name: import data into mysql
+    community.mysql.mysql_db:
+      login_user: root
+      login_password: "{{ mysql_root_password }}"
+      login_host: "{{login_host}}" 
+      target: /app/schema/backend.sql
+      state: dump   
 
 
