--- a/backend.yaml
+++ b/backend.yaml
@@ -50,7 +50,7 @@
     ansible.builtin.pip:
       name:
       - PYSQL # to connect MySQL DB from Ansible
-      - Crytography
+      - Cryptography
     executable: pip3.9 # pip3.11 if python version is 3.11   
 
   - name: import data into mysql
