--- a/backend.yaml
+++ b/backend.yaml
@@ -49,7 +49,7 @@
   - name: install python mysql command
     ansible.builtin.pip:
       name:
-      - PYSQL # to connect MySQL DB from Ansible
+      - PYMYSQL # to connect MySQL DB from Ansible
       - Cryptography
     executable: pip3.9 # pip3.11 if python version is 3.11   
 
