--- a/backend.yaml
+++ b/backend.yaml
@@ -56,8 +56,8 @@
   - name: import data into mysql
     community.mysql.mysql_db:
       login_user: root
-      login_password: "{{ mysql_root_password }}"
-      login_host: "{{login_host}}" 
+      login_password: "{{ login_pssword }}"
+      login_host: "{{ login_host }}" 
       target: /app/schema/backend.sql
       state: dump   
 
