--- a/backend.yaml
+++ b/backend.yaml
@@ -15,6 +15,9 @@
     ansible.builtin.dnf: # only works for redhat family
       name: nodejs
       state: installed
+      1oop:
+      - nodejs
+      - mysql
 
   - name: create expense user
     ansible.builtin.user:
