--- a/backend.yaml
+++ b/backend.yaml
@@ -65,4 +65,8 @@
       state: import
       name: all   
 
+  - name: daemon reload
+    ansible.builtin.systemd_service:
+    daemon_reload: true     
+
 
