--- a/backend.yaml
+++ b/backend.yaml
@@ -67,6 +67,16 @@
 
   - name: daemon reload
     ansible.builtin.systemd_service:
-      daemon_reload: true     
+      daemon_reload: true   
 
+  - name: start and enable backend service
+    ansible.builtin.service:
+      name: backend  
+      state: started
+      enabled: yes
+
+  - name: restart backend service
+    ansible.builtin.service:
+      name: backend
+      state: restarted    
 
